--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # ----------- CONFIGURABLE START -----------
-title:            "LiberXue|FullStack|独立开发者|jekyll blog|GitHub blog"
-description:      "Full Stack独立开发者|欢迎来到 LiberXue「角落」侃侃理想、谈谈人生、敲敲代码。"
-url:              https://liberxue.github.io # 域名
-signoff:          "LiberXue" # Your name
-facebook_appid:   #liberxue
-google_analytics: UA-101222464-1
+title:            "Van·筠琰"
+description:      "You jump,I can fly."
+url:              https://INJNainggolan.github.io # 域名
+signoff:          "Van·筠琰" # Your name
+facebook_appid:   
+google_analytics: 
 share:            true 
 # 分页
 paginate: 15
-paginate_path: "liberxuepage:num"
+paginate_path: "INJNainggolanpage:num"
 gems: [jekyll-paginate]
 links:
   - name:         首页
