--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ links:
   - name:         首页
     url:          /
     external:     false
-  - name:         书籍
+  - name:         随笔
     url:          /book
     external:     false
-  - name:         旅游
+  - name:         小记
     url:          /road
     external:     false
   - name:         归档
